src/test/ui/suggestions/issue-85347.stderr
error[E0107]: this associated type takes 1 lifetime argument but 0 lifetime arguments were supplied
  --> $DIR/issue-85347.rs:3:42
   |
LL |     type Bar<'a>: Deref<Target = <Self>::Bar<Target = Self>>;
   |                                          ^^^ expected 1 lifetime argument
   |
note: associated type defined here, with 1 lifetime parameter: `'a`
  --> $DIR/issue-85347.rs:3:10
   |
LL |     type Bar<'a>: Deref<Target = <Self>::Bar<Target = Self>>;
   |          ^^^ --
help: add missing lifetime argument
   |
LL |     type Bar<'a>: Deref<Target = <Self>::Bar<'a, Target = Self>>;
   |                                              +++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0107`.
